2017-12-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* sinc() function

2017-12-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Suppress gnuplot error output in terminal

2017-12-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix x = 0 m && x != 0

2017-12-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix exact calculation of sqrt(-1/8)

2017-11-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Infinity fixes/enhancements. Unsigned infinity removed.

2017-11-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix (a+b*i)^0

2017-11-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enhanced display of repeating decimals
	* Fix numbers less than 1 when max decimals is 0
	* Enhanced display of parsed expression
	* Digit grouping

2017-11-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to disable units in physical constants

2017-11-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix engineering mode (exp mode < -1) for rational numbers < 1 with few decimals
	* Fix complex number multiplication (a+b*i)*(c+d*i)

2017-11-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Interval arithmetic

2017-10-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Bitcoins
	* Use 'X' and 'E' (or approprioate unicode characters) instead of 'A' and 'B' in duodecimal numbers
	* Set approximate flag in zeta

2017-09-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enhanced simplification of expressions with polynomial division
	* Data with invalid values are plotted as discontinuous function

2017-09-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix thread not terminated on Calculator deletion (issue #45)

2017-09-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix 5/(x−y)−3/(2x−2y)=7(2x-2y)
	* Factorization fixes
	* sqrt(-a)=sqrt(a)*i

2017-09-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix convert cbrt(L) to optimal unit
	* Fix automatic prefixes for negative numbers
