@@ -4065,20 +4065,25 @@ void Calculator::parseSigns(string &str, bool convert_to_internal_representation
 		q_end.push_back(quote_index);
 		quote_index++;
 	}
-	int index_shift = 0;
 	for(size_t i = 0; i < signs.size(); i++) {
 		size_t ui = str.find(signs[i]);
 		while(ui != string::npos) {
 			bool b = false;
 			for(size_t ui2 = 0; ui2 < q_end.size(); ui2++) {
-				if(ui <= q_end[ui2] + index_shift && ui >= q_begin[ui2] + index_shift) {
-					ui = str.find(signs[i], q_end[ui2] + 1 + index_shift);
+				if(ui <= q_end[ui2] && ui >= q_begin[ui2]) {
+					ui = str.find(signs[i], q_end[ui2] + 1);
 					b = true;
 					break;
 				}
 			}
 			if(!b) {
-				index_shift += real_signs[i].length() - signs[i].length();
+				int index_shift = real_signs[i].length() - signs[i].length();
+				for(size_t ui2 = 0; ui2 < q_begin.size(); ui2++) {
+					if(q_begin[ui2] >= ui) {
+						q_begin[ui2] += index_shift;
+						q_end[ui2] += index_shift;
+					}
+				}
 				str.replace(ui, signs[i].length(), real_signs[i]);
 				ui = str.find(signs[i], ui + real_signs[i].length());
 			}
@@ -4092,14 +4097,20 @@ void Calculator::parseSigns(string &str, bool convert_to_internal_representation
 			while(ui != string::npos) {
 				bool b = false;
 				for(size_t ui2 = 0; ui2 < q_end.size(); ui2++) {
-					if(ui <= q_end[ui2] + index_shift && ui >= q_begin[ui2] + index_shift) {
-						ui = str.find(internal_signs[i], q_end[ui2] + 1 + index_shift);
+					if(ui <= q_end[ui2] && ui >= q_begin[ui2]) {
+						ui = str.find(internal_signs[i], q_end[ui2] + 1);
 						b = true;
 						break;
 					}
 				}
 				if(!b) {
-					index_shift += strlen(internal_signs[i + 1]) - strlen(internal_signs[i]);
+					int index_shift = strlen(internal_signs[i + 1]) - strlen(internal_signs[i]);
+					for(size_t ui2 = 0; ui2 < q_begin.size(); ui2++) {
+						if(q_begin[ui2] >= ui) {
+							q_begin[ui2] += index_shift;
+							q_end[ui2] += index_shift;
+						}
+					}
 					str.replace(ui, strlen(internal_signs[i]), internal_signs[i + 1]);
 					ui = str.find(internal_signs[i], ui + strlen(internal_signs[i + 1]));
 				}
@@ -4128,7 +4139,7 @@ void Calculator::parse(MathStructure *mstruct, string str, const ParseOptions &p
 	string stmp, stmp2;
 
 	parseSigns(str, true);
-	
+
 	if(po.brackets_as_parentheses) {
 		gsub(LEFT_VECTOR_WRAP, LEFT_PARENTHESIS, str);
 		gsub(RIGHT_VECTOR_WRAP, RIGHT_PARENTHESIS, str);
